fix list spacing, cutoff text

--- a/index.html
+++ b/index.html
@@ -523,28 +523,27 @@ window.addEventListener('scroll', () => {
             </div>
             <div class="col-10" style="height: 40vh; overflow-y: hidden;" id="featuresRight">
               <h5 id="item1">Runs Existing Code</h5>
-              <div style="height: 8vh"></div>
+              <div style="height: 50px"></div>
               <h5 id="item2">Native Javascript</h5>
-              <div style="height: 8vh"></div>
+              <div style="height: 50px"></div>
               <h5 id="item3">Hardware Bindings</h5>
-              <div style="height: 8vh"></div>
+              <div style="height: 50px"></div>
               <h5 id="item4">Made in Javascript</h5>
-              <div style="height: 8vh"></div>
+              <div style="height: 50px"></div>
               <h5 id="item5">Multithreading Reality Tabs</h5>
-              <div style="height: 8vh"></div>
+              <div style="height: 50px"></div>
               <h5 id="item6">Futuristic APIs</h5>
-              <div style="height: 8vh"></div>
+              <div style="height: 50px"></div>
               <h5 id="item7">Speed Past Legacy</h5>
-              <div style="height: 8vh"></div>
+              <div style="height: 50px"></div>
               <h5 id="item8">Not a Fork</h5>
-              <div style="height: 8vh"></div>
+              <div style="height: 50px"></div>
               <h5 id="item9">Cross Platform</h5>
-              <div style="height: 8vh"></div>
+              <div style="height: 50px"></div>
               <h5 id="item10">Package for Stores</h5>
-              <div style="height: 8vh"></div>
+              <div style="height: 50px"></div>
               <h5 id="item11">Great on gas</h5>
-              <div style="height: 8vh"></div>
-              <div style="height: 8vh"></div>
+              <div style="height: 100px"></div>
             </div>
           </div>
         </div>
